cut down white space form feature title and fix bottom page white space

--- a/app/apps/themes/oscar_website/assets/css/main.scss
+++ b/app/apps/themes/oscar_website/assets/css/main.scss
@@ -40,7 +40,7 @@ html, body {
   height: 100%;
 
   .oscar-content {
-    min-height: 60%;
+    min-height: 50%;
     position: relative;
   }
 }
